--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>COUNTRIES TRIVIA</title>
-  <base href="./">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.31d6cfe0d16ae931b73c.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.f7791ee12da892013155.js" defer></script><script src="polyfills.2cbba7863efffe02ce30.js" defer></script><script src="main.11a86be17b420f2bc833.js" defer></script>
+<script src="runtime.f7791ee12da892013155.js" defer></script><script src="polyfills.2cbba7863efffe02ce30.js" defer></script><script src="main.bd67e43393262d78061e.js" defer></script>
 
 </body></html>
